# Game

./: Makefile  pyproject.toml
games_project_abdumalikov/VD_games/: cli.py
games_project_abdumalikov/VD_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
games_project_abdumalikov/VD_games/scripts/: VD_even.py  VD_games.py  VD_gcd.py  VD_main.py  VD_prime.py  brain_calc.py  vd_progression.py
